--- a/content/characters.html
+++ b/content/characters.html
@@ -790,7 +790,7 @@
         </div>
         <div class="flip-card-back">
           <h4>Jicette Vor-Jorin</h4>
-          <i>The Exiled</i>
+          <i>The Exiled, Deceased</i>
           <!-- <p class="p-1" style="font-size: 18px;">Info</p> -->
         </div>
       </div>
