--- a/content/glyphs.html
+++ b/content/glyphs.html
@@ -135,39 +135,53 @@
               <img src="../assets/glyphs/ancient_g11.png" class="mr-3 ">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">PERIOD(?)</h5>
-                Seen in the middle of words as well as at the end of sentences.
+                <b>Seen on a radio</b>. Seen in the middle of words as well as at the end of sentences.
               </div>
             </li>
             <li class="media mb-5 pr-2 ">
-              <img src="../assets/glyphs/ancient_g05.png" class="mr-3 ">
+              <img src="../assets/glyphs/ancient_g22.png" class="mr-3 ">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">Meaning Unknown</h5>
-                Seen as part of a sentence/string of glyphs.
+                <h5 class="mt-0 mb-1 glyph-title">ANIMAL</h5>
+                Non-person e.g. animal
               </div>
             </li>
             <li class="media mb-5 pr-2 ">
               <img src="../assets/glyphs/ancient_g06.png" class="mr-3 ">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">Meaning Unknown</h5>
+                <h5 class="mt-0 mb-1">Likely Definition: DEATH ???</h5>
                 Seen as part of a sentence/string of glyphs.
               </div>
             </li>
             <li class="media mb-5 pr-2 ">
               <img src="../assets/glyphs/ancient_g07.png" class="mr-3  ">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">Meaning Unknown</h5>
-                Seen as part of a sentence/string of glyphs.
+                <h5 class="mt-0 mb-1">SPEECH, SOUND</h5>
+                <b>Seen on a radio</b>. Vocalizing, talking Given to us by the Song of Hightown, has several varieties but this one is more precise.
               </div>
             </li>
             <li class="media mb-5 pr-2 ">
               <img src="../assets/glyphs/ancient_g08.png" class="mr-3 ">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">Meaning Unknown</h5>
-                Seen as part of a sentence/string of glyphs.
+                <h5 class="mt-0 mb-1">UP / HIGH / ABOVE</h5>
+                <b>Seen on a radio</b>. Upward direction, high position, above
               </div>
             </li>
             <li class="media mb-5 pr-2 ">
               <img src="../assets/glyphs/ancient_g09.png" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">METAPHOR</h5>
+                <b>Seen on a radio</b>. “What follows is likely figurative or complex, likely not strictly literal”
+              </div>
+            </li>
+            <li class="media mb-5 pr-2 ">
+              <img src="../assets/glyphs/ancient_g18.png" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">KNOWLEDGE or INFORMATION</h5>
+                Seen on texts/scrolls containing knowledge, information. Shows up in historical records regarding gem pergashans.
+              </div>
+            </li>
+            <li class="media mb-5 pr-2 ">
+              <img src="../assets/glyphs/ancient_g05.png" class="mr-3 ">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Meaning Unknown</h5>
                 Seen as part of a sentence/string of glyphs.
@@ -202,13 +216,6 @@
               </div>
             </li>
             <li class="media mb-5 pr-2 ">
-              <img src="../assets/glyphs/ancient_g18.png" class="mr-3 ">
-              <div class="media-body">
-                <h5 class="mt-0 mb-1">Meaning Unknown</h5>
-                Seen as part of a sentence/string of glyphs.
-              </div>
-            </li>
-            <li class="media mb-5 pr-2 ">
               <img src="../assets/glyphs/ancient_g19.png" class="mr-3 ">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Meaning Unknown</h5>
@@ -224,6 +231,13 @@
             </li>
             <li class="media mb-5 pr-2 ">
               <img src="../assets/glyphs/ancient_g21.png" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1 glyph-title">Meaning Unknown</h5>
+                Seen as part of a sentence/string of glyphs.
+              </div>
+            </li>
+            <li class="media mb-5 pr-2 ">
+              <img src="../assets/glyphs/ancient_g23.png" class="mr-3 ">
               <div class="media-body">
                 <h5 class="mt-0 mb-1 glyph-title">Meaning Unknown</h5>
                 Seen as part of a sentence/string of glyphs.
