--- a/content/items.html
+++ b/content/items.html
@@ -1126,7 +1126,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-xs-6">
+                <!-- <div class="col-xs-6">
                     <table style="display: none;" class="table-sm table-striped mb-5 ranged-weapons item-table item-section side-table">
                         <tbody>
                             <tr>
@@ -1203,7 +1203,7 @@
                           </tr>
                         </tbody>
                     </table>
-                </div>
+                </div> -->
 
                 <!-- Gear -->
                 <div class="col-xs-4">
