--- a/content/classes.html
+++ b/content/classes.html
@@ -80,14 +80,14 @@
           <ul class="list-group align-self-start accordion mb-5" id="class-selection">
             <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#barbarian-archetypes" id="barbarian" onclick="resetCoreFeaturesButton()">
               <span class="nav-link class-nav-item text-reset" id="barbarian-name">Barbarian</span>
-              <span class="badge badge-secondary badge-pill" id="barbarian-pill">6</span>
+              <span class="badge badge-secondary badge-pill" id="barbarian-pill">4</span>
             </li>
             <div class="collapse archetypes" id="barbarian-archetypes" data-parent="#class-selection">
               <ul class="list-group flex-column">
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="ancestral-guardian-archetype" onclick="resetCoreFeaturesButton()">Ancestral Guardian</li>
-                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="battlerager-archetype" onclick="resetCoreFeaturesButton()">Battlerager</li>
+                  <!-- <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="battlerager-archetype" onclick="resetCoreFeaturesButton()">Battlerager</li> -->
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="beast-archetype" onclick="resetCoreFeaturesButton()">Beast</li>
-                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="berserker-archetype" onclick="resetCoreFeaturesButton()">Berserker</li>
+                  <!-- <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="berserker-archetype" onclick="resetCoreFeaturesButton()">Berserker</li> -->
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="primal-warrior-archetype" onclick="resetCoreFeaturesButton()">Primal Warrior</li>
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="totem-warrior-archetype" onclick="resetCoreFeaturesButton()">Totem Warrior</li>
                 </ul>
@@ -123,13 +123,13 @@
             </div>
             <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ranger-archetypes" id="ranger" onclick="resetCoreFeaturesButton()">
               <span class="nav-link class-nav-item text-reset" id="ranger-name">Ranger</span>
-              <span class="badge badge-secondary badge-pill" id="ranger-pill">3</span>
+              <span class="badge badge-secondary badge-pill" id="ranger-pill">2</span>
             </li>
             <div class="collapse archetypes" id="ranger-archetypes" data-parent="#class-selection">
               <ul class="list-group flex-column">
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="dervish-archetype" onclick="resetCoreFeaturesButton()">Dervish</li>
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="doppelkin-archetype" onclick="resetCoreFeaturesButton()">Doppelkin Master</li>
-                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="slayer-archetype" onclick="resetCoreFeaturesButton()">Slayer</li>
+                  <!-- <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="slayer-archetype" onclick="resetCoreFeaturesButton()">Slayer</li> -->
                 </ul>
             </div>
             <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#rogue-archetypes" id="rogue" onclick="resetCoreFeaturesButton()">
@@ -431,7 +431,6 @@
         var button = document.getElementById('coreFeatureToggle');
         var toggle = false;
         var disclaimer = document.getElementById('coreHidden');
-        console.log(disclaimer);
         if (button.innerText.includes('Hide Core Features')) {
             toggle = true;
             button.innerText = 'Show Core Features';
