--- a/content/classes.html
+++ b/content/classes.html
@@ -101,8 +101,8 @@
               <ul class="list-group flex-column">
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="battle-master-archetype" onclick="resetCoreFeaturesButton()">Battle Master</li>
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="brute-archetype" onclick="resetCoreFeaturesButton()">Brute</li>
-                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="cavalier-archetype" onclick="resetCoreFeaturesButton()">Cavalier</li>
-                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="champion-archetype" onclick="resetCoreFeaturesButton()">Champion</li>
+                  <!-- <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="cavalier-archetype" onclick="resetCoreFeaturesButton()">Cavalier</li>
+                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="champion-archetype" onclick="resetCoreFeaturesButton()">Champion</li> -->
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="psi-knight-archetype" onclick="resetCoreFeaturesButton()">Psi Knight</li>
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="sharpshooter-archetype" onclick="resetCoreFeaturesButton()">Sharpshooter</li>
                   <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="warcaller-archetype" onclick="resetCoreFeaturesButton()">Warcaller</li>
