Update with infusions (wip)

--- a/content/psionics.html
+++ b/content/psionics.html
@@ -38,6 +38,7 @@
                       <a class="dropdown-item" href="races.html">Races</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="feats.html">Feats</a>
+                      <a class="dropdown-item" href="infusions.html">Infusions</a>
                       <a class="dropdown-item" href="training.html">Training</a>
                     </div>
                 </li>
@@ -98,176 +99,156 @@
                     <tr class="table-header">
                       <th class="text-center" scope="col">Level</th>
                       <th class="text-center" scope="col">Disciplines<br>Known</th>
-                      <th scope="col">Psi Points</th>
+                      <th class="text-center" scope="col">Psi Points*</th>
                       <th class="text-center" scope="col">Psi Limit</th>
-                      <th scope="col">Optional: Average Psi Points</th>
-                      <th scope="col">Features</th>
+                      <th class="text-center" scope="col">Features</th>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">1st</td>
                       <td class="text-center">1</td>
-                      <td>1 + Intelligence modifier</td>
+                      <td class="text-center">1</td>
                       <td class="text-center">2</td>
-                      <td>—</td>
-                      <td>Select a Psionic Discipline</td>
+                      <td class="text-center">Psionic Talent, Psionic Discipline, Brightness, Proficiencies[3]**, Feat</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">2nd</td>
                       <td class="text-center">1</td>
-                      <td>1d4 + Intelligence modifier</td>
+                      <td class="text-center">+1d4[2]</td>
                       <td class="text-center">2</td>
-                      <td>2 + Intelligence modifier</td> 
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">3rd</td>
                       <td class="text-center">1</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">3</td>
-                      <td>—</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">4th</td>
                       <td class="text-center">1</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">3</td>
-                      <td>—</td>
-                      <td>+1 Training Point, +1 Proficiency Point</td>
+                      <td class="text-center">+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">5th</td>
                       <td class="text-center">2</td>
-                      <td>1d4 + Intelligence modifier</td>
+                      <td class="text-center">+1d4[2]</td>
                       <td class="text-center">3</td>
-                      <td>2 + Intelligence modifier</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">6th</td>
                       <td class="text-center">2</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">3</td>
-                      <td>—</td>
-                      <td>Select a Psionic Talent</td>
+                      <td class="text-center">Select a Psionic Talent</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">7th</td>
                       <td class="text-center">2</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">4</td>
-                      <td>—</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">8th</td>
                       <td class="text-center">2</td>
-                      <td>1d4 + Intelligence modifier</td>
+                      <td class="text-center">+1d4[2]</td>
                       <td class="text-center">4</td>
-                      <td>2 + Intelligence modifier</td>
-                      <td>+1 Training Point, +1 Proficiency Point</td>
+                      <td class="text-center">+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">9th</td>
                       <td class="text-center">2</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">4</td>
-                      <td>—</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">10th</td>
                       <td class="text-center">3</td>
-                      <td>1d6 + Intelligence modifier</td>
+                      <td class="text-center">+1d6[3]</td>
                       <td class="text-center">4</td>
-                      <td>3 + Intelligence modifier</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">11th</td>
                       <td class="text-center">3</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">5</td>
-                      <td>—</td>
-                      <td>Select a Psionic Mastery</td>
+                      <td class="text-center">Select a Psionic Mastery***</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">12th</td>
                       <td class="text-center">3</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">5</td>
-                      <td>—</td>
-                      <td>+1 Training Point, +1 Proficiency Point</td>
+                      <td class="text-center">+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">13th</td>
                       <td class="text-center">3</td>
-                      <td>1d6 + Intelligence modifier</td>
+                      <td class="text-center">+1d6[3]</td>
                       <td class="text-center">5</td>
-                      <td>3 + Intelligence modifier</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">14th</td>
                       <td class="text-center">3</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">6</td>
-                      <td>—</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">15th</td>
                       <td class="text-center">4</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">6</td>
-                      <td>—</td>
-                      <td>Select a Psionic Talent</td>
+                      <td class="text-center">Select a Psionic Talent</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">16th</td>
                       <td class="text-center">4</td>
-                      <td>1d6 + Intelligence modifier</td>
+                      <td class="text-center">+1d6[3]</td>
                       <td class="text-center">6</td>
-                      <td>3 + Intelligence modifier</td>
-                      <td>+1 Training Point, +1 Proficiency Point</td>
+                      <td class="text-center">+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">17th</td>
                       <td class="text-center">4</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">6</td>
-                      <td>—</td>
-                      <td>Mastery Improvement</td>
+                      <td class="text-center">Mastery Improvement</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">18th</td>
                       <td class="text-center">4</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                       <td class="text-center">7</td>
-                      <td>—</td>
-                      <td>—</td>
+                      <td class="text-center">—</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">19th</td>
                       <td class="text-center">4</td>
-                      <td>1d8 + Intelligence modifier</td>
+                      <td class="text-center">+1d8[4]</td>
                       <td class="text-center">7</td>
-                      <td>4 + Intelligence modifier</td>
-                      <td>+1 Training Point, +1 Proficiency Point</td>
+                      <td class="text-center">+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
                       <td class="text-center" scope="row">20th</td>
                       <td class="text-center">5</td>
-                      <td>1d8 + Intelligence modifier</td>
+                      <td class="text-center">+1d8[4]</td>
                       <td class="text-center">7</td>
-                      <td>4 + Intelligence modifier</td>
-                      <td>Select a Psionic Mastery</td>
+                      <td class="text-center">Select a Psionic Mastery</td>
                     </tr>
                     <tr>
                       <th class="class-border border-0" colspan="10"></th>
                     </tr>
                   </tbody>
                 </table>
+                <p class="w-75 align-self-center mb-5"><b>*</b> <i>The value in parenthesis is the optional average value you can select instead of rolling for Psi Points. In addition, always add your Intelligence modifier to the total Psi Points you gain.</i><br><b>**</b> <i>These Proficiencies replace tradition 5e Background and give you skill, tool, and language proficiencies in addition to those granted by your class or race.</i><br><b>***</b> <i>If you haven't spent Psi Points this turn, you can bypass your Psi Limit to use a Mastery Power.</i></p>
 
                 <h2 class="text-center mb-5" id="psionic-display-title">All Orders & Talents</h2>
 
@@ -540,7 +521,7 @@
                     <div class="psionics-body" style="display: none">
                         <span class="psionics-subtitle">Psychic Focus</span><ul style="list-style-type:none;"><li>While focused on this discipline, you gain resistance to psychic damage.</li></ul>
 						<span class="psionics-subtitle">Psychic Backlash</span><ul style="list-style-type:none;"><li><b>Cost: </b>1-7 psi point</li><li><b>Evoking Time: </b>1 reaction</li><li><b>Range: </b>Self</li><li><b>Duration: </b>Instantaneous</li><li>If you are hit with an attack that targets you and you can see your attacker, you can use your reaction to inflict 1d4 psychic damage per psi point spent on this ability.</li></ul>
-                        <span class="psionics-subtitle">Psidar</span><ul style="list-style-type:none;"><li><b>Cost: </b>2 psi point</li><li><b>Evoking Time: </b>1 reaction</li><li><b>Range: </b>30 feet</li><li><b>Duration: </b>Instantaneous</li><li>When you are targeted by a psionic attack, you can use your reaction to seek out your attacker. You mentally follow the flow of psionic energy to its source. If the your attacker is beyond the range of this ability, the trail dissipates and leaves you only with a general sense of direction.</li></ul>
+                        <span class="psionics-subtitle">Psidar</span><ul style="list-style-type:none;"><li><b>Cost: </b>2 psi point</li><li><b>Evoking Time: </b>1 reaction</li><li><b>Range: </b>30 feet</li><li><b>Duration: </b>Instantaneous</li><li>When you are targeted by a psionic power, you can use your reaction to seek out your attacker. You mentally follow the flow of psionic energy to its source. If the your attacker is beyond the range of this ability, the trail dissipates and leaves you only with a general sense of direction.</li></ul>
                         <span class="psionics-subtitle">Mental Jammer</span><ul style="list-style-type:none;"><li><b>Cost: </b>3 psi point</li><li><b>Evoking Time: </b>1 action</li><li><b>Range: </b>Self</li><li><b>Duration: </b>Concentration, up to 1 hour</li><li>You build a net of protective static over your mind and aura. For the next hour, your thoughts and emotions cannot be detected. In addition, you automatically succeed in any saving throw if someone attempts to force telepathic communication on you.<br> Finally, if someone attempts to analyze your aura (such as through Assess Foe or View Aura), you are alerted and can use your reaction to perform an Intelligence (Psionics) check against the creature’s. On a success, you can alter one element of your choice about your aura: injury level, resistances, vulnerabilities, health pool, emotional state.</li></ul>
 						<span class="psionics-subtitle">Psychic Redoubt</span><ul style="list-style-type:none;"><li><b>Cost: </b>5 psi point</li><li><b>Evoking Time: </b>1 action</li><li><b>Range: </b>30 feet</li><li><b>Duration: </b>Concentration, up to 10 minutes</li><li>You create a field of protective psychic energy. Choose any number of creatures within 30 feet of you. Until your concentration ends, each target has resistance to psychic damage and advantage on Intelligence, Wisdom, and Charisma saving throws. </li></ul>
 						<span class="psionics-subtitle">Sharp Intellect (Mastery)</span><ul style="list-style-type:none;"><li><i>Passive. </i>Your mind is a fortress. You have advantage on all saving throws against psionic effects and abilities. Also, when a foe harms you with a psionic ability that deals psychic damage, you bounce some of that harm back. Your attacker takes psychic damage equal to your Intelligence modifier. </li></ul>
