--- a/content/characters.html
+++ b/content/characters.html
@@ -38,6 +38,7 @@
                       <a class="dropdown-item" href="races.html">Races</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="feats.html">Feats</a>
+                      <a class="dropdown-item" href="infusions.html">Infusions</a>
                       <a class="dropdown-item" href="training.html">Training</a>
                     </div>
                 </li>
@@ -517,7 +518,7 @@
         </div>
         <div class="flip-card-back">
           <h4>Vina Vor-Koraq</h4>
-          <i>Sere of the Sand Falcons </i>
+          <i>Sere of the Sand Falcons, Deceased </i>
           <p class="p-1" style="font-size: 18px;">Vina is a kind-hearted but influential Sand Sere who has agreed to sponsor and assist Kalar in his venture for independence. She is a friend of Trik and fellow Drifter, and Valar observed Vina at the Conclave markets. Her generosity and respectful behavior were surprising. </p>
         </div>
       </div>
