--- a/content/glyphs.html
+++ b/content/glyphs.html
@@ -38,6 +38,7 @@
                       <a class="dropdown-item" href="races.html">Races</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="feats.html">Feats</a>
+                      <a class="dropdown-item" href="infusions.html">Infusions</a>
                       <a class="dropdown-item" href="training.html">Training</a>
                     </div>
                 </li>
