--- a/pergasha.html
+++ b/pergasha.html
@@ -39,6 +39,7 @@
                         <a class="dropdown-item" href="content/races.html">Races</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="content/feats.html">Feats</a>
+                        <a class="dropdown-item" href="content/infusions.html">Infusions</a>
                         <a class="dropdown-item" href="content/training.html">Training</a>
                         </div>
                     </li>
