--- a/content/feats.html
+++ b/content/feats.html
@@ -1,103 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="../pergasha.css">
-    <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico"/>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Feats - Pergasha</title>
-</head>
-<body onload="featPage()">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" href="../pergasha.css">
+        <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico" />
+
+        <title>Feats - Pergasha</title>
+    </head>
+
+    <body onload="featPage()">
 
 
-    <header>
+        <header>
 
-        <nav class="navbar navbar-dark navbar-expand-xl">
-            <div class="navbar-brand  mr-4">
-                <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pergasha.html">Home</a>
-                    </li>
-                    <li class="nav-item dropdown active">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Player Options
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="classes.html">Classes</a>
-                        <a class="dropdown-item" href="races.html">Races</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="feats.html">Feats</a>
-                        <a class="dropdown-item" href="infusions.html">Infusions</a>
-                        <a class="dropdown-item" href="training.html">Training</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="psionics.html">Psionics</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        References
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="characters.html">Characters</a>
-                            <a class="dropdown-item" href="glyphs.html">Glyphs</a>
-                            <a class="dropdown-item" href="items.html">Items</a>
-                            <a class="dropdown-item" href="locations.html">Locations</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="rules.html">Rules</a>
-                    </li>
-                </ul>
-                <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
-                <div class="d-none" id="notlogged">
-                    <form class="form-inline">
-                        <div class="form-group form-group-sm">
-                            <input type="text" class="form-control form-control-sm mr-sm-2 login-input" id="username" placeholder="Username">
-                            <input type="password" class="form-control form-control-sm mr-sm-2 login-input" id="pwd" placeholder="Password">
-                            <button type="button" class="btn btn-warning btn-sm" id="loginbtn">Login</button>
-                        </div>
-                    </form>
-                    <input type="checkbox" id="showPwd" class="mr-1"  autocomplete="off"><span id="show-pwd-label">Show Password</span> 
+            <nav class="navbar navbar-dark navbar-expand-xl">
+                <div class="navbar-brand  mr-4">
+                    <a href="../pergasha.html">
+                        <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
+                    </a>
                 </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pergasha.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown active">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Player Options
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="classes.html">Classes</a>
+                                <a class="dropdown-item" href="races.html">Races</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="feats.html">Feats</a>
+                                <a class="dropdown-item" href="infusions.html">Infusions</a>
+                                <a class="dropdown-item" href="training.html">Training</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="psionics.html">Psionics</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                References
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="characters.html">Characters</a>
+                                <a class="dropdown-item" href="glyphs.html">Glyphs</a>
+                                <a class="dropdown-item" href="items.html">Items</a>
+                                <a class="dropdown-item" href="locations.html">Locations</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="rules.html">Rules</a>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
+                    <div class="d-none" id="notlogged">
+                        <form class="form-inline">
+                            <div class="form-group form-group-sm">
+                                <input type="text" class="form-control form-control-sm mr-sm-2 login-input"
+                                    id="username" placeholder="Username">
+                                <input type="password" class="form-control form-control-sm mr-sm-2 login-input" id="pwd"
+                                    placeholder="Password">
+                                <button type="button" class="btn btn-warning btn-sm" id="loginbtn">Login</button>
+                            </div>
+                        </form>
+                        <input type="checkbox" id="showPwd" class="mr-1" autocomplete="off"><span
+                            id="show-pwd-label">Show Password</span>
+                    </div>
+                </div>
+            </nav>
+
+        </header>
+
+        <div class="row mt-5 mb-5 mr-0 ml-0 flex-wrap justify-content-center container-fluid" id="feat-container">
+            <div class="col list-group mb-5 align-self-start sticky-top" id="feat-list" role="tablist">
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="all-filter"
+                    data-toggle="list" role="button">All Feats</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="psionics-filter"
+                    data-toggle="list" role="button">Psionic Feats</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="strength-filter"
+                    data-toggle="list" role="button">Strength</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="dexterity-filter"
+                    data-toggle="list" role="button">Dexterity</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="constitution-filter"
+                    data-toggle="list" role="button">Constitution</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="intelligence-filter"
+                    data-toggle="list" role="button">Intelligence</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="wisdom-filter"
+                    data-toggle="list" role="button">Wisdom</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="charisma-filter"
+                    data-toggle="list" role="button">Charisma</a>
             </div>
-        </nav>
-
-    </header>
-
-    <div class="row mt-5 mb-5 mr-0 ml-0 flex-wrap justify-content-center container-fluid" id="feat-container">
-        <div class="col list-group mb-5 align-self-start sticky-top" id="feat-list" role="tablist">
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="all-filter" data-toggle="list" role="button">All Feats</a>
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="psionics-filter" data-toggle="list" role="button">Psionic Feats</a>
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="strength-filter" data-toggle="list" role="button">Strength</a>
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="dexterity-filter" data-toggle="list" role="button">Dexterity</a>
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="constitution-filter" data-toggle="list" role="button">Constitution</a>
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="intelligence-filter" data-toggle="list" role="button">Intelligence</a>
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="wisdom-filter" data-toggle="list" role="button">Wisdom</a>
-                <a class="list-group-item list-group-item-action list-group-item-secondary" id="charisma-filter" data-toggle="list" role="button">Charisma</a>
+            <div class="col d-flex flex-column" id="feat-display-section">
+            </div>
         </div>
-        <div class="col d-flex flex-column" id="feat-display-section">
-        </div>
-    </div>
 
-    
 
-    <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="../pergasha.js"></script>
-</body>
+        <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
+
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
+        <script src="../pergasha.js"></script>
+    </body>
+
 </html>
